# youworker-fullstack

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  BACKEND_REFACTORING_GUIDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  FRONTEND_REFACTORING_GUIDE.md  FRONTEND_UX_MASTERPIECE_GUIDE.md  FRONTEND_UX_REFACTORING_GUIDE.md  GPT4ALL_REPLICA_GUIDE.md  Makefile  README.md  REFACTORING_FOLLOWUP_SUMMARY.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  STYLING_ANALYSIS_SUMMARY.txt  STYLING_INCONSISTENCIES.md  STYLING_QUICK_REFERENCE.md  STYLING_REPORT_INDEX.md  TTS_IMPROVEMENTS_SUMMARY.md  UI_UX_REFACTORING_GUIDE.md  UX_FINAL_SUMMARY.md  YOUWORKER_DESIGN_GUIDE.md  YOUWORKER_FRONTEND_SUMMARY.md  frontend-refactor-prompt.md  openapi.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: audio_pipeline.py  config.py  csrf.py  dependencies.py  main.py  main.py.backup  websocket_manager.py
apps/api/auth/: __init__.py  security.py
apps/api/middleware/: __init__.py  cors_validation.py  csrf.py  ip_whitelist.py  logging.py  metrics.py  request_id.py  security.py
apps/api/routes/: account.py  analytics.py  auth.py  chat.py  crud.py  deps.py  groups.py  health.py  ingestion.py  websocket.py
apps/api/routes/analytics/: __init__.py  ingestion.py  overview.py  sessions.py  tokens.py  tools.py
apps/api/routes/chat/: __init__.py  helpers.py  models.py  persistence.py  simple.py  streaming.py  voice.py  (+1 more)
apps/api/services/: __init__.py  account_service.py  analytics_service.py  base.py  chat_service.py  document_service.py  group_service.py  ingestion_service.py  session_service.py  startup.py
apps/api/utils/: __init__.py  error_handling.py  response_formatting.py  retry.py  validation.py
apps/frontend/: .dockerignore  .env.local  .eslintrc.cjs  .gitignore  ARCHITECTURE.md  COLOR_CONTRAST_AUDIT.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  IMPLEMENTATION_STATUS.md  README.md  README_DIRECT_RUN.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SETUP_NOTES.md  START.sh  eslint.config.mjs  frontend-refactor-prompt.md  jest.config.js  jest.setup.js  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  stryker.conf.json  tailwind.config.ts  vitest.config.ts
apps/frontend-v2/: .prettierignore  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts
apps/frontend-v2/app/: globals.css  layout.tsx  theme-provider.tsx
apps/frontend-v2/locales/: de.json  en.json  es.json  fr.json  it.json  zh.json
apps/frontend-v2/src/: middleware.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: error-boundary.tsx  header.tsx  sidebar.tsx
apps/frontend/contexts/: AuthContext.tsx
apps/frontend/hooks/: use-voice-recording.ts
apps/frontend/lib/: api-client.ts  api.ts  audio-utils.ts  config.ts  constants.ts  dynamic-components.ts  env.ts  hooks.ts  i18n.tsx  markdown-utils.ts  mode.tsx  sse.ts  types.ts  utils.ts  voice-recorder.ts  websocket-client.ts
apps/frontend/playwright-report/: index.html
apps/frontend/public/: audio-processor.js
apps/frontend/test-results/: .last-run.json
apps/frontend/types/: jest.d.ts
apps/mcp_servers/audio/: server.py
apps/mcp_servers/datetime/: server.py  server_refactored_example.py
apps/mcp_servers/ingest/: server.py
apps/mcp_servers/semantic/: server.py
apps/mcp_servers/units/: server.py
apps/mcp_servers/web/: server.py
data/: .gitignore
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITETTURA.md  AUDIO_TROUBLESHOOTING.md  AUTHENTIK.md  CHAT_ARCHITECTURE.md  CODE_ANALYSIS.md  CONTRIBUTING.md  CORS_SECURITY.md  DATABASE_POOLING.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  FRONTEND.md  GUIDA_UTENTE.md  IMPROVEMENTS_SUMMARY.md  INSTALLAZIONE.md  LOGGING_BEST_PRACTICES.md  MCP_SERVERS.md  MIGLIORAMENTI_UX.md  MODES_AND_TRANSPORTS.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SECURITY.md  SETUP.md  SVILUPPO.md  TESTING_AGENT_MCP.md  TESTING_GUIDE.md  THIRD_PARTY_LICENSES.md  UX_ANALYSIS.md  UX_IMPROVEMENTS_SUMMARY.md  guida-sviluppatori.md  guida-utente.md  licenses-node.csv  licenses-python.csv  tecnica.md
examples/ingestion/Figc/: AllegCom_10-Modulo-VARIAZIONE-GARA-PROV-PADOVA.xls
ops/: download-piper-models.sh
ops/alembic/: DATABASE_MIGRATIONS.md  alembic.ini  env.py
ops/alembic/versions/: 0001_init.py  0002_add_encryption_to_chat_messages.py  0002_collection_acl.py  0003_gin_indexes.py
ops/compose/: COMPOSE_README.md  README.md  docker-compose.core.yml  docker-compose.infra.yml  docker-compose.mcp.yml  docker-compose.yml  nginx.conf
ops/compose/prometheus/: prometheus.yml
ops/cron/: youworker-backup.cron
ops/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.mcp_audio  Dockerfile.mcp_datetime  Dockerfile.mcp_ingest  Dockerfile.mcp_semantic  Dockerfile.mcp_units  Dockerfile.mcp_web  download_models.py
ops/scripts/: backup-database.sh  restore-backup.sh  verify-backup.sh
requirements/: dev.txt  mcp-audio.txt  mcp-datetime.txt  mcp-semantic.txt  mcp-units.txt  mcp-web.txt
scripts/: admin_cli.py  check_datetime_tool.py  check_mcp_agent.py  download-kokoro-assets.sh  download-piper-models.sh  generate-encryption-key.py  generate-ssl-cert.sh  generate_licenses.py  reset-database.sh  run-tests.sh  setup-tests.sh  start-with-ssl.sh  test_datetime.py  test_mcp_agent.py  verify_setup.sh
tests/: conftest.py  test_settings_env.py
tests/e2e/: test_chat_endpoint.py
tests/ingestion/: test_pipeline.py
tests/integration/: __init__.py  test_agent_mcp_integration.py  test_chat_endpoints.py  test_mode_switching.py
tests/parsers/: test_ocr_extractor.py
tests/unit/: test_agent_loop.py  test_chat_service.py  test_correlation_id.py  test_cors_validation.py  test_exceptions.py  test_mcp_base_handler.py  test_mcp_ws_dispatcher.py  test_metadata_user_id.py  test_registry_name_mapping.py  test_retry.py  test_security.py  test_voice_turn_success.py
to_ingest/Libri/: PromessiSposi.txt
(+352 files in other folders)
