[tool.poetry]
name = "youworker-agent-backend"
version = "0.1.0"
description = "Production-ready AI agent backend with dynamic MCP tools"
authors = ["YouWorker Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# API
fastapi = "^0.120.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.20"
slowapi = "^0.1.9"
prometheus-fastapi-instrumentator = "^7.0.0"
websockets = ">=12,<16"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# LLM & MCP
httpx = "^0.28.1"

# Vector store
qdrant-client = "^1.12.1"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
alembic = "^1.17.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}

# Ingestion
docling = "^2.15.0"
docling-core = "^2.8.1"
numpy = ">=1.26,<3.0"
faster-whisper = "^1.2.0"
piper-tts = "^1.3.0"

# Web scraping
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pandas = "^2.2.3"
pdfplumber = "^0.11.4"
Pillow = ">=10.4.0,<12.0.0"
pytesseract = "^0.3.13"

# Utilities
python-dateutil = "^2.9.0"
pytz = ">=2024.2"
tenacity = "^9.0.0"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
ruff = "^0.14.2"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
